# vb6parse

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  deny.toml  enhancement.md
.github/: copilot-instructions.md  module-documentation-template.md
.github/workflows/: benchmarks.yml  coverage.yml  library.yml  wasm.yml
benches/: README.md  bulk_parser_load.rs  class_files.rs  form_files.rs  form_resources.rs  lexer.rs  module_files.rs  parser.rs  project_files.rs  project_load.rs
docs/: README.md  _config.yml  benchmarks.css  benchmarks.html  benchmarks.js  benchmarks.json  coverage.html  docs-style.css  documentation.html  getting-started.html  index.html  playground.html  stats.js  stats.json  theme-switcher.js  web_example.md
docs/technical/: antlr4-spec.html  frm-format.html  frx-format.html
documents/: FRX_format.md  FormFile_explained.md
examples/: audiostation_parse.rs  cst_complex_find.rs  cst_count_statements.rs  cst_depth_first.rs  cst_filter_trivia.rs  cst_find_comments.rs  cst_find_complex_predicate.rs  cst_find_identifiers.rs  cst_first_significant_child.rs  cst_first_sub_structure.rs  cst_navigation.rs  cst_parse.rs  cst_token_vs_nontoken.rs  debug_cst.rs  debug_resource.rs  parse_class.rs  parse_control_only.rs  parse_form.rs  parse_module.rs  parse_project.rs  sourcestream.rs  sourcestream_bounds_and_errors.rs  sourcestream_case_insensitive.rs  sourcestream_line_operations.rs  sourcestream_parse_tokens.rs  sourcestream_pattern_extraction.rs  tokenstream.rs  visitor_example.rs
examples/docs/: cst_navigation.rs  error_handling.rs  form_parsing.rs  hello_world.rs  project_parsing.rs  tokenization.rs
fuzz/: Cargo.toml  README.md  Recent_Failures.md
fuzz/fuzz_targets/: class_file.rs  cst_parse.rs  form_file.rs  form_resource.rs  module_file.rs  project_file.rs  sourcefile_decode.rs  sourcestream.rs  tokenize.rs
scripts/: README.md  backfill-benchmark-history.py  build-wasm.py  generate-benchmarks.py  generate-benchmarks.sh  generate-coverage.py  generate-coverage.sh  generate-library-docs.py
src/: class.rs  errors.rs  form.rs  header.rs  lib.rs  module.rs  parser.rs  project.rs  sourcefile.rs  sourcestream.rs  test_utils.rs  tokenize.rs  tokenstream.rs  vb6.rs  vb6stream.rs  wasm.rs
src/errors/: class.rs  decode.rs  form.rs  lexer.rs  mod.rs  module.rs  project.rs  property.rs  resource.rs  source.rs  tokenize.rs
src/files/: mod.rs
src/io/: mod.rs  source_file.rs  source_stream.rs
src/language/: color.rs  controls.rs  mod.rs  tokens.rs
src/lexer/: mod.rs  token_stream.rs
src/parsers/: class.rs  compilesettings.rs  cst.rs  form.rs  header.rs  mod.rs  module.rs  objectreference.rs  parseresults.rs  parserresults.rs  project.rs  projectproperties.rs  properties.rs  sourcestream.rs  success.rs  syntaxkind.rs  vb6.rs  vb6code.rs  vb6stream.rs
src/syntax/: mod.rs
tests/: Tests_explained.md  artificial_life.rs  bulk.rs  call_argument_list.rs  class.rs  colon_separator.rs  conditional.rs  cst.rs  declaration.rs  depth_limit_tests.rs  do_loop.rs  edge_cases.rs  enum_bracket.rs  expression_whitespace.rs  for_loop.rs  form.rs  form_resource.rs  invalid_syntax.rs  keyword_identifiers.rs  line_statements.rs  module.rs  option_explicit.rs  ppdm.rs  project.rs  project_load.rs  select_case_nested_if.rs  vb6_code.rs  vb6_code_artificial_life.rs  with_block_dot_prefix.rs
tests/class/: audiostation.rs  binary_metamorphosis.rs  bitrate_calculator.rs  cdiu_beat_up_editor.rs  chess_brain_vb.rs  discrete_probability_detector.rs  endless_runner_game_vb6_0.rs  environment.rs  vb6_code.rs
tests/cst/: appactivate_statement.rs  assignment.rs  beep_statement.rs  call.rs  chdir_statement.rs  chdrive_statement.rs  comments.rs  conditional.rs  cst.rs  do_loop.rs  do_loop_in_function.rs  exit_statement.rs  function.rs  function_linecont.rs  goto_statement.rs  inline_if.rs  label.rs  main.rs  option_explicit.rs  property_statement.rs  redim_statement.rs  select_case.rs  set_statement.rs  sub.rs  with_statement.rs
tests/edge_cases/: recursion_limits.rs  recursion_limits_readme.md
tests/form/: audiostation.rs  binary_metamorphosis.rs  bitrate_calculator.rs  cdiu_beat_up_editor.rs  chess_brain_vb.rs  discrete_probability_detector.rs  endless_runner_game_vb6_0.rs  environment.rs  vb6_code.rs
tests/form_resource/: audiostation.rs  binary_metamorphosis.rs  bitrate_calculator.rs  cdiu_beat_up_editor.rs  chess_brain_vb.rs  discrete_probability_detector.rs  endless_runner_game_vb6_0.rs  environment.rs  vb6_code.rs
tests/invalid_syntax/: invalid_control_flow.rs  invalid_declarations.rs  invalid_literals.rs  invalid_parameter_list.rs  invalid_project.rs  invalid_syntax_readme.md  mismatched_keywords.rs  missing_end.rs  missing_keywords.rs
tests/module/: audiostation.rs  binary_metamorphosis.rs  bitrate_calculator.rs  cdiu_beat_up_editor.rs  chess_brain_vb.rs  discrete_probability_detector.rs  endless_runner_game_vb6_0.rs  environment.rs  vb6_code.rs
tests/parsing/: call.rs  cst.rs  cst_navigation.rs  main.rs  sub.rs
tests/ppdm/: ppdm.rs  ppdm.vbp
tests/project/: audiostation.rs  binary_metamorphosis.rs  bitrate_calculator.rs  cdiu_beat_up_editor.rs  chess_brain_vb.rs  discrete_probability_detector.rs  endless_runner_game_vb6_0.rs  environment.rs  vb6_code.rs
tests/snapshots/: class__artificial_life_organism_class_load.snap  class__artificial_life_organism_class_load.snap.new  class__blacklight_effect_class_load-2.snap  class__blacklight_effect_class_load.snap  class__blacklight_effect_class_load.snap.new  class__gradient_2d_class_load.snap  class__gradient_2d_class_load.snap.new  class__hidden_markov_model_class_load.snap  class__hidden_markov_model_class_load.snap.new  form__artificial_life_form_load.snap  form__artificial_life_form_load.snap.new  form__blacklight_effect_form_load.snap  form__blacklight_effect_form_load.snap.new  form__brightness_effect_part_1_form_load.snap  form__brightness_effect_part_1_form_load.snap.new  form__brightness_effect_part_2_form_load.snap  form__colorize_form_load.snap  (+94 more)
(+1832 files in other folders)
