[package]
name = "vb6parse"
version = "0.5.1"
edition = "2021"
license-file = "LICENSE"
description = "vb6parse is a library for parsing and analyzing VB6 code, from projects, to controls, to modules, and forms."
repository = "https://github.com/scriptandcompile/vb6parse"
readme = "README.md"
keywords = ["vb6", "parser", "analyzer", "vb6parse"]
categories = ["development-tools", "parsing", "parser-implementations"]

# exclude the test data files from the package
exclude = [
    "tests/data/ADM-TSC-Tools-ALM-QC/*",
    "tests/data/audiostation/*",
    "tests/data/Binary-metamorphosis/*",
    "tests/data/Bitrate-calculator/*",
    "tests/data/CdiuBeatUpEditor/*",
    "tests/data/ChessBrainVB/*",
    "tests/data/CoolWind2D-GameEngine-CHS/*",
    "tests/data/DevOps/*",
    "tests/data/Discrete-Probability-Detector-in-VB6/*",
    "tests/data/Endless-runner-Game_VB6.0/*",
    "tests/data/Environment/*",
    "tests/data/framework-vb6/*",
    "tests/data/Genomin/*",
    "tests/data/KORG_Read_pcg/*",
    "tests/data/Markov-Chains-VB6/*",
    "tests/data/Mix-two-signals-by-using-Spectral-Forecast-in-VB6-app-v1.0/*",
    "tests/data/Mix-two-signals-by-using-Spectral-Forecast-in-VB6-app-v2.0/*",
    "tests/data/NewTab/*",
    "tests/data/OCX_Advanced_Control__VB6/*",
    "tests/data/OCX_Advanced_Grid__VB6/*",
    "tests/data/omelette-vb6/*",
    "tests/data/opendialup/*",
    "tests/data/Papaver-Genomics/*",
    "tests/data/project-duplication-detection-system/*",
    "tests/data/ProjectExaminer/*",
    "tests/data/PromKappa-1.0-makes-Objective-Digital-Stains/*",
    "tests/data/Prototype-software-for-Photon-pixel-coupling/*",
    "tests/data/SK-ADO_Dan_SQL_Demo__VB6/*",
    "tests/data/SK-Alarm_Clock__VB6/*",
    "tests/data/SK-Password-Application-ADD-ON__VB6/*",
    "tests/data/SK-SQL_Code_Generator_V2__VB6/*",
    "tests/data/stdVBA-Inspiration/*",
    "tests/data/SteamyDock/*",
    "tests/data/Troyano-VB6-PoC/*",
    "tests/data/ucJLDatePicker/*",
    "tests/data/unlightvbe_qs/*",
    "tests/data/vb6/*",
    "tests/data/vb6-code/*",
    "tests/data/Vb6.0/*",
    "tests/data/VB6-2D-Physic-Engine/*",
    "tests/data/VB6-add-GUI-objects-at-runtime/*",
    "tests/data/VB6-samples/*",
    "tests/data/VbScalesReader/*",
    "tests/data/VPN-Lifeguard/*",
    "tests/data/w.bloggar/*",
    "tests/data/Win_Dialogs/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winnow = "0.7.6"
uuid = "1.16.0"
thiserror = "2.0.12"
ariadne = "0.5.1"
image = "0.25.6"
num_enum = "0.7.3"
strum = "0.26.3"
strum_macros = "0.26.4"
encoding_rs = "0.8.35"
bstr = { version = "1.12.0", features = ["serde"] }
either = { version = "1.15.0", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }


[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
insta = { version = "1.42.2", features = ["yaml"] }

[[bench]]
name = "bulk_parser_load"
harness = false

[lints.clippy]
pedantic = "warn"
